syntax = "proto2";

package com.mackenziehigh.socius.gpb;
option java_package = "com.mackenziehigh.socius.gpb";


message ProcessRequest
{
    optional string staticId = 1;

    optional string dynamicId = 2;

    repeated string arguments = 3;

    repeated string stdin = 4;
}

message ProcessResponse
{
    optional string staticId = 1;

    optional string dynamicId = 2;

    optional int64 startTime = 3;

    optional bool alive = 4;

    repeated string stdout = 5;

    repeated string stderr = 6;
}






